crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__all_samples@comments.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/comments.pcode
---
Ok:
  actions:
    - ConstantPool:
        - a
        - "1"
        - b
        - "2"
        - c
        - "3"
        - d
        - "4"
        - test
        - e
        - "5"
        - f
        - // not a comment
        - g
        - /* not a comment */
        - h
        - "\\\"/* still not a comment */\\\""
        - i
        - "6"
        - j
        - "7"
        - k
        - "8"
    - Push:
        - Constant: 0
    - Push:
        - Constant: 1
    - DefineLocal
    - Push:
        - Constant: 2
    - Push:
        - Constant: 3
    - DefineLocal
    - Push:
        - Constant: 4
    - Push:
        - Constant: 5
    - DefineLocal
    - Push:
        - Constant: 6
    - Push:
        - Constant: 7
    - DefineLocal
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 2
    - Push:
        - Constant: 8
    - CallFunction
    - Pop
    - Push:
        - Constant: 9
    - Push:
        - Constant: 10
    - DefineLocal
    - Push:
        - Constant: 11
    - Push:
        - Constant: 12
    - DefineLocal
    - Push:
        - Constant: 13
    - Push:
        - Constant: 14
    - DefineLocal
    - Push:
        - Constant: 15
    - Push:
        - Constant: 16
    - DefineLocal
    - Push:
        - Constant: 17
    - Push:
        - Constant: 18
    - DefineLocal
    - Push:
        - Constant: 19
    - Push:
        - Constant: 20
    - DefineLocal
    - Push:
        - Constant: 21
    - Push:
        - Constant: 22
    - DefineLocal
  label_positions: {}
