crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__all_samples@import_affects_functions.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/import_affects_functions.pcode
---
Ok:
  actions:
    - ConstantPool:
        - BitmapData
        - flash
        - display
        - beforeImport
        - afterImport
    - DefineFunction:
        name: beforeImport
        params: []
        actions:
          actions:
            - Push:
                - Constant: 0
            - GetVariable
            - Trace
          label_positions: {}
    - DefineFunction:
        name: afterImport
        params: []
        actions:
          actions:
            - Push:
                - Constant: 1
            - GetVariable
            - Push:
                - Constant: 2
            - GetMember
            - Push:
                - Constant: 0
            - GetMember
            - Trace
          label_positions: {}
    - Push:
        - Integer: 0
        - Constant: 3
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
        - Constant: 4
    - CallFunction
    - Pop
  label_positions: {}
